[package]
name = "rpos"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = {git = "https://github.com/rust-lang/libc.git"}
fdt = "0.1.5"
ctor = "0.2.6"
polling = "3.5.0"
sendfd = "0.4.3"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "schedule_bench"
harness = false

[features]
lock_step_enabled = []